tests/fail/unknown_trait.stderr
error: unknown operation: `pow`
 --> $DIR/unknown_trait.rs:7:4
  |
7 | fn pow(lhs: X, exponent: u32) -> X {
  |    ^^^
